deploy: 4f37e4b4a3a2c6f801a84d91277a7dec54db1526

--- a/franske-courses/current/itc-2300/assignments.html
+++ b/franske-courses/current/itc-2300/assignments.html
@@ -552,7 +552,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <div class="ulist">
 <ul>
 <li>
-<p>The format is the same as a regular lab report (what you did, problems you had, how you tested, and what you learned) but the report must be much longer (about 4 pages single spaced) because it includes 3 weeks of work. It should be clear how you spent the three weeks and that it really was the equivalent amount of work as three weeks of regular classwork.</p>
+<p>The format is the same as a regular lab report (what you did, problems you had, how you tested, and what you learned) but the report must be much longer (about 1600 words which is about 4 pages single spaced) because it includes 2-3 weeks of work. It should be clear how you spent the three weeks and that it really was the equivalent amount of work as three weeks of regular classwork.</p>
 </li>
 <li>
 <p>You should thoroughly describe what you did (not exact steps, but an overview of the major things you accomplished), and what new things you learned by doing the project.</p>
@@ -572,7 +572,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <p>There will be two primary components to your grade for the project, a lab report and a presentation.</p>
 </div>
 <div class="paragraph">
-<p>You will be turning in a lab report using the same format you have used for other lab reports in the class but it will be longer as this is a much more substantial project. Lab reports for this project should be about 4 pages long (single spaced) and include all the regular sections of a lab report (what you did, what problems you had, how you tested, and what you learned. The project lab report will be worth 100 points.</p>
+<p>You will be turning in a lab report using the same format you have used for other lab reports in the class but it will be longer as this is a much more substantial project. Lab reports for this project should be about 1600 words (this is about 4 pages single spaced) and include all the regular sections of a lab report (what you did, what problems you had, how you tested, and what you learned. The project lab report will be worth 100 points.</p>
 </div>
 <div class="paragraph">
 <p>In addition you will receive a grade on a 10 minute presentation to the class. The presentation should be interesting, engaging, informative, and factually correct. It is a good idea to show off your actual work as much as possible (not just talk about it) so you are strongly encouraged to find a way to demonstrate something "live" during the presentation.</p>
@@ -638,7 +638,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-12-05 15:05:46 -0600<br>
+<p>Document Build Time: 2022-12-06 17:50:03 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
