deploy: a4a4df525fe53cc8cc508f17d71f2992ad0f2687

--- a/franske-courses/current/itc-2516/assignments.html
+++ b/franske-courses/current/itc-2516/assignments.html
@@ -521,6 +521,9 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <p>Complete the online practice final exam (10 points for attempting)</p>
 </li>
 <li>
+<p>Complete the online Packet Tracer Practice Skills Assessment (10 points for attempting)</p>
+</li>
+<li>
 <p>Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)</p>
 </li>
 </ul>
@@ -934,6 +937,9 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <p>Complete the online practice final exam (10 points for attempting)</p>
 </li>
 <li>
+<p>Complete the online Packet Tracer Practice Skills Assessment - all parts (10 points for attempting)</p>
+</li>
+<li>
 <p>Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)</p>
 </li>
 </ul>
@@ -987,7 +993,7 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-12-06 17:50:03 -0600<br>
+<p>Document Build Time: 2022-12-12 17:18:41 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
