--- a/franske-courses/current/itc-2611/syllabus.html
+++ b/franske-courses/current/itc-2611/syllabus.html
@@ -142,6 +142,24 @@
   </li>
 </ul>
   </li>
+  <li class="nav-item" data-depth="2">
+    <button class="nav-item-toggle"></button>
+    <span class="nav-text">ITC-2611</span>
+<ul class="nav-list">
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../itc-2621/">Course Home</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../itc-2621/syllabus">Syllabus</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../itc-2621/schedule">Schedule</a>
+  </li>
+  <li class="nav-item" data-depth="3">
+    <a class="nav-link" href="../itc-2621/assignments">Assignments</a>
+  </li>
+</ul>
+  </li>
 </ul>
   </li>
   <li class="nav-item" data-depth="1">
@@ -746,6 +764,9 @@ Be aware that the final grade in online gradebooks may be calculated in a way wh
 <p>Academic integrity is one of the most important values in higher education. This principle requires that each student&#8217;s work represents his or her own personal efforts and that the student acknowledges the intellectual contributions of others. The foundation for this principle is student academic honesty. IHCC students are expected to honor the requirements of the College Academic Integrity Policy. The following are some examples of unacceptable academic practices that will be viewed as policy violations.</p>
 </div>
 <div class="paragraph">
+<p>For the purposes of this policy artificial intelligence (AI) systems such as ChatGPT or automatic summarization systems are "another person". As such they are prohibted unless authorized in advance by your instructor.</p>
+</div>
+<div class="paragraph">
 <p>It is unacceptable to submit the work of another person as your own. If you quote, summarize, paraphrase, or use the ideas of another, you must accurately attribute that information. If you do not acknowledge the source, you are plagiarizing. Academic dishonesty also includes unauthorized collaboration on academic work; taking, acquiring, or using test materials without faculty permission; submitting the same assignment for multiple classes without instructor permission; taking an examination for another person and many other situations. If you are unsure whether you are plagiarizing or how to cite a source please ask an instructor or staff member for help prior to turning in the assignment.</p>
 </div>
 <div class="paragraph">
@@ -804,7 +825,7 @@ Be aware that the final grade in online gradebooks may be calculated in a way wh
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2022-12-14 14:33:21 -0600<br>
+<p>Document Build Time: 2023-01-09 11:23:38 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
