deploy: 922d155bb0c34b94a8fb5c94dab2c02bce8d454c

--- a/franske-courses/current/itc-2621/assignments.html
+++ b/franske-courses/current/itc-2621/assignments.html
@@ -473,10 +473,22 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <li>
 <p>Complete the online certification practice exam (10 points for attempting)</p>
 </li>
-<li>
-<p>Meet with the instructor once per week to discuss course progress and ask questions (up to 10 points each based on progress)</p>
-</li>
 </ul>
+</div>
+<div class="paragraph">
+<p>You must do one of the following choices at least once a week (up to 10 points each based on progress):
+* Meet with the instructor online Tuesdays 6:00-8:30pm to discuss course progress and ask questions. <strong>Note that you must send an email by 7pm on Tuesday if you want to meet after 7pm. I will only stay until 7pm unless someone has notified me they will be coming later</strong>.
+* Meet with the instructor at another time during the week scheduled in advance. <strong>Availability is not guaranteed so you should schedule this early.</strong>
+* Submit a written statement on your progress in the course by email. You must meet the following requirements with your statement:
+<strong> It must be emailed to <a href="mailto:ben@ihitc.net">ben@ihitc.net</a>
+</strong> The subject line on Tuesday of each week before 7:00pm. For weekly tracking purposes it cannot be sent before Tueday.
+<strong> The subject line must be "ITC-2621 Weekly Update"
+</strong> It must answer the following questions and should be about 400-500 words:
+<strong>* What is your full name
+</strong>* Where are you with the schedule? Are you on track, everything due done? Are you behind, how far? Are you ahead, how far?
+<strong>* What things did you learn this week?
+</strong>* How did any labs go for you this week?
+<strong>*</strong> What questions do you have about the content or course this week?</p>
 </div>
 </div>
 <div class="sect2">
@@ -569,7 +581,7 @@ NOTE: Assistance with issues will not be guaranteed outside of the normal work d
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2023-01-09 11:32:17 -0600<br>
+<p>Document Build Time: 2023-01-10 15:45:10 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
