--- a/franske-courses/current/itc-2621/syllabus.html
+++ b/franske-courses/current/itc-2621/syllabus.html
@@ -523,7 +523,7 @@ If you are struggling with labs it&#8217;s strongly suggested you make arrangeme
 <h2 id="_course_design"><a class="anchor" href="#_course_design"></a>Course Design</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This course will be taught as a fully online course with regular synchronous instructor meetings. This means that you will be meeting regularly with the instructor in an online web conference call during the scheduled course time to assess your progress. Additional details about this are available on the course website.</p>
+<p>This course will be taught as a fully online course with your choice of instructor meetings or written progress reports. This means that you will be able to meet with the instructor during a scheduled time each week or turn in a written progress report each week. Additional details about this are available on the assignments page of the course website.</p>
 </div>
 </div>
 </div>
@@ -768,7 +768,7 @@ Be aware that the final grade in online gradebooks may be calculated in a way wh
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2023-01-09 11:32:17 -0600<br>
+<p>Document Build Time: 2023-01-10 15:45:10 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
