deploy: eac2db1760128fc7dc01e9cdb3017b5bb02700d0

--- a/franske-courses/current/itc-2621/syllabus.html
+++ b/franske-courses/current/itc-2621/syllabus.html
@@ -263,7 +263,7 @@
 <div class="paragraph">
 <p>Instructor: Dr. Ben Franske<br>
 Term: Spring 2023 (1/10/2023-5/9/2023)<br>
-Meetings: Tu 6:00-8:30pm<br>
+Meetings: Not Required<br>
 Location: Online</p>
 </div>
 </div>
@@ -350,9 +350,39 @@ Location: Online</p>
 <div class="ulist">
 <ul>
 <li>
-<p>CCNP Enterprise Advanced Routing ENARSI 300-410 Official Cert Guide (Lacoste, Edgeworth) ISBN: 978-1587145254
-CAUTION: Yes, This textbook really is required. Unlike many Cisco Networking Academy classes there is not a free online version on Netacad!
-TIP: The first edition printed version of this book has many errors in it. You can avoid these errors by getting the ebook version <em>from the publisher</em> Cisco Press. Note that Amazon and other ebook versions are not necessarily updated.</p>
+<p>CCNP Enterprise Advanced Routing ENARSI 300-410 Official Cert Guide (Lacoste, Edgeworth) ISBN: 978-1587145254</p>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock caution">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-caution" title="Caution"></i>
+</td>
+<td class="content">
+Yes, This textbook really is required. Unlike many Cisco Networking Academy classes there is not a free online version on Netacad!
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
+<div class="openblock">
+<div class="content">
+<div class="admonitionblock tip">
+<table>
+<tr>
+<td class="icon">
+<i class="fa icon-tip" title="Tip"></i>
+</td>
+<td class="content">
+The first edition printed version of this book has many errors in it. You can avoid these errors by getting the ebook version <em>from the publisher</em> Cisco Press. Note that Amazon and other ebook versions are not necessarily updated.
+</td>
+</tr>
+</table>
+</div>
+</div>
+</div>
 </li>
 <li>
 <p>CCNP and CCIE Enterprise Core &amp; CCNP Enterprise Advanced Routing Portable Command Guide (Empson, Gargano) ISBN: 978-0135768167</p>
@@ -768,7 +798,7 @@ Be aware that the final grade in online gradebooks may be calculated in a way wh
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2023-01-10 15:53:18 -0600<br>
+<p>Document Build Time: 2023-01-10 19:11:38 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
