--- a/franske-courses/current/itc-2621/schedule.html
+++ b/franske-courses/current/itc-2621/schedule.html
@@ -351,8 +351,12 @@
 <div class="sectionbody">
 <div class="sect2">
 <h3 id="_readings_to_do_this_week_3"><a class="anchor" href="#_readings_to_do_this_week_3"></a>Readings to do this week</h3>
-<div class="paragraph">
-<p>*Chapter 4</p>
+<div class="ulist">
+<ul>
+<li>
+<p>Chapter 4</p>
+</li>
+</ul>
 </div>
 </div>
 <div class="sect2">
@@ -1103,7 +1107,7 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2023-01-10 15:53:18 -0600<br>
+<p>Document Build Time: 2023-01-10 19:11:38 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
