--- a/franske-courses/current/itc-2300/syllabus.html
+++ b/franske-courses/current/itc-2300/syllabus.html
@@ -304,10 +304,10 @@ Location: B144</p>
 <div class="ulist">
 <ul>
 <li>
-<p>Online office hours (email during these times and we can setup a Zoom or phone call right away): Tu 2:00-4:00pm</p>
+<p>Online office hours: Tu 6:00-7:00pm</p>
 </li>
 <li>
-<p>On campus office hours and lab assistance time (subject to change to online based on COVID-19 recommendations) look for me in the Business Building room B120 or B109, B143, or B144: M 5:00-6:00pm, W 5:00-6:00pm</p>
+<p>On campus office hours not available for Spring 2023</p>
 </li>
 <li>
 <p>Webcam/phone/in-person meetings also available other times by appointment.</p>
@@ -659,7 +659,7 @@ Be aware that the final grade in online gradebooks may be calculated in a way wh
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2023-01-10 19:11:38 -0600<br>
+<p>Document Build Time: 2023-01-10 19:13:02 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
