deploy: b69eed3906506ec38ef2b2df66d93e56913f3ac0

--- a/franske-courses/current/itc-2621/schedule.html
+++ b/franske-courses/current/itc-2621/schedule.html
@@ -489,7 +489,7 @@
 <p>Chapter 6 Lab Report</p>
 </li>
 <li>
-<p>Chapters 1-5 Exam</p>
+<p>Chapters 1 - 5: Routing and EIGRP Exam</p>
 </li>
 </ul>
 </div>
@@ -633,7 +633,7 @@
 <p>Chapter 10 Lab Report</p>
 </li>
 <li>
-<p>Chapters 6-10 Exam</p>
+<p>Chapters 6 - 10: OSPF Exam</p>
 </li>
 </ul>
 </div>
@@ -663,9 +663,15 @@
 <p>Chapter 12</p>
 </li>
 <li>
-<p>Chapter 13
-=== Other Work to do this week</p>
+<p>Chapter 13</p>
 </li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="_other_work_to_do_this_week_9"><a class="anchor" href="#_other_work_to_do_this_week_9"></a>Other Work to do this week</h3>
+<div class="ulist">
+<ul>
 <li>
 <p>Online Discussion Forum Chapter 11 Response Posts</p>
 </li>
@@ -710,7 +716,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_work_to_do_this_week_9"><a class="anchor" href="#_other_work_to_do_this_week_9"></a>Other Work to do this week</h3>
+<h3 id="_other_work_to_do_this_week_10"><a class="anchor" href="#_other_work_to_do_this_week_10"></a>Other Work to do this week</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -763,7 +769,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_work_to_do_this_week_10"><a class="anchor" href="#_other_work_to_do_this_week_10"></a>Other Work to do this week</h3>
+<h3 id="_other_work_to_do_this_week_11"><a class="anchor" href="#_other_work_to_do_this_week_11"></a>Other Work to do this week</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -792,7 +798,7 @@
 <p>Chapter 14 Lab Report</p>
 </li>
 <li>
-<p>Chapters 11-14 Exam</p>
+<p>Chapters 11 - 14: BGP Exam</p>
 </li>
 </ul>
 </div>
@@ -816,7 +822,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_work_to_do_this_week_11"><a class="anchor" href="#_other_work_to_do_this_week_11"></a>Other Work to do this week</h3>
+<h3 id="_other_work_to_do_this_week_12"><a class="anchor" href="#_other_work_to_do_this_week_12"></a>Other Work to do this week</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -875,7 +881,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_work_to_do_this_week_12"><a class="anchor" href="#_other_work_to_do_this_week_12"></a>Other Work to do this week</h3>
+<h3 id="_other_work_to_do_this_week_13"><a class="anchor" href="#_other_work_to_do_this_week_13"></a>Other Work to do this week</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -913,7 +919,7 @@
 <p>Chapter 18 Lab Report</p>
 </li>
 <li>
-<p>Chapters 15-17 Exam</p>
+<p>Chapters 15 - 17: Conditional Forwarding and Route Redistribution Exam</p>
 </li>
 </ul>
 </div>
@@ -937,7 +943,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_work_to_do_this_week_13"><a class="anchor" href="#_other_work_to_do_this_week_13"></a>Other Work to do this week</h3>
+<h3 id="_other_work_to_do_this_week_14"><a class="anchor" href="#_other_work_to_do_this_week_14"></a>Other Work to do this week</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -972,7 +978,7 @@
 <p>Chapter 20 Lab Report</p>
 </li>
 <li>
-<p>Chapters 18-20 Exam</p>
+<p>Chapters 18 - 20: VPNs Exam</p>
 </li>
 </ul>
 </div>
@@ -993,7 +999,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_work_to_do_this_week_14"><a class="anchor" href="#_other_work_to_do_this_week_14"></a>Other Work to do this week</h3>
+<h3 id="_other_work_to_do_this_week_15"><a class="anchor" href="#_other_work_to_do_this_week_15"></a>Other Work to do this week</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -1043,7 +1049,7 @@
 </div>
 </div>
 <div class="sect2">
-<h3 id="_other_work_to_do_this_week_15"><a class="anchor" href="#_other_work_to_do_this_week_15"></a>Other Work to do this week</h3>
+<h3 id="_other_work_to_do_this_week_16"><a class="anchor" href="#_other_work_to_do_this_week_16"></a>Other Work to do this week</h3>
 <div class="ulist">
 <ul>
 <li>
@@ -1060,7 +1066,7 @@
 <div class="ulist">
 <ul>
 <li>
-<p>Chapters 21-23 Exam</p>
+<p>Chapters 21 - 23: Infrastructure Security and Management Exam</p>
 </li>
 <li>
 <p>Chapter 22 Lab Report</p>
@@ -1107,7 +1113,7 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2023-01-24 18:03:31 -0600<br>
+<p>Document Build Time: 2023-02-23 19:15:01 -0600<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
