deploy: 009dff4b9a2a08f16def2830b168635bb5a11aa1

--- a/franske-courses/current/itc-2621/assignments.html
+++ b/franske-courses/current/itc-2621/assignments.html
@@ -491,10 +491,13 @@ Discussion forum posts are usually worth a larger portion of your final grade th
 <div class="ulist">
 <ul>
 <li>
+<p>The instructor may revoke this option at any time. You will be notified by email or verbally if this option is no longer possible in which case you must use one of the other options until notified otherwise.</p>
+</li>
+<li>
 <p>It must be emailed to <a href="mailto:ben@ihitc.net">ben@ihitc.net</a></p>
 </li>
 <li>
-<p>The subject line on Tuesday of each week before 7:00pm. For weekly tracking purposes it cannot be sent before Tueday.</p>
+<p>It must be emailed on Tuesday of each week before 7:00pm. For weekly tracking purposes it cannot be sent before Tueday or after Tuesday.</p>
 </li>
 <li>
 <p>The subject line must be "ITC-2621 Weekly Update"</p>
@@ -617,7 +620,7 @@ NOTE: Assistance with issues will not be guaranteed outside of the normal work d
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2023-02-23 19:15:01 -0600<br>
+<p>Document Build Time: 2023-04-18 17:59:28 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
