deploy: 16590931cd9f4747c1dd8ed1e1af9d0543cb2d05

--- a/franske-courses/current/itc-2621/schedule.html
+++ b/franske-courses/current/itc-2621/schedule.html
@@ -339,6 +339,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapter 1 First Post</p>
+</li>
+<li>
 <p>Chapter 1 Lab Report</p>
 </li>
 </ul>
@@ -382,6 +385,15 @@
 <h3 id="_assignments_due_by_6pm_today_3"><a class="anchor" href="#_assignments_due_by_6pm_today_3"></a>Assignments Due by 6pm Today</h3>
 <div class="ulist">
 <ul>
+<li>
+<p>Online Discussion Forum Chapter 1 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 2 First Post</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 3 First Post</p>
+</li>
 <li>
 <p>Chapter 2 Lab Report</p>
 </li>
@@ -439,6 +451,15 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapter 2 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 3 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 4 First Post</p>
+</li>
+<li>
 <p>Chapter 4 Lab Report</p>
 </li>
 </ul>
@@ -482,6 +503,15 @@
 <h3 id="_assignments_due_by_6pm_today_5"><a class="anchor" href="#_assignments_due_by_6pm_today_5"></a>Assignments Due by 6pm Today</h3>
 <div class="ulist">
 <ul>
+<li>
+<p>Online Discussion Forum Chapter 4 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 5 First Post</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 6 First Post</p>
+</li>
 <li>
 <p>Chapter 5 Lab Report</p>
 </li>
@@ -529,6 +559,15 @@
 <h3 id="_assignments_due_by_6pm_today_6"><a class="anchor" href="#_assignments_due_by_6pm_today_6"></a>Assignments Due by 6pm Today</h3>
 <div class="ulist">
 <ul>
+<li>
+<p>Online Discussion Forum Chapter 5 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 6 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 7 First Post</p>
+</li>
 <li>
 <p>Chapter 7 Lab Report</p>
 </li>
@@ -583,6 +622,12 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapter 7 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 8 First Post</p>
+</li>
+<li>
 <p>Chapter 8 Lab Report</p>
 </li>
 </ul>
@@ -626,6 +671,15 @@
 <h3 id="_assignments_due_by_6pm_today_8"><a class="anchor" href="#_assignments_due_by_6pm_today_8"></a>Assignments Due by 6pm Today</h3>
 <div class="ulist">
 <ul>
+<li>
+<p>Online Discussion Forum Chapter 8 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 9 First Post</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 10 First Post</p>
+</li>
 <li>
 <p>Chapter 9 Lab Report</p>
 </li>
@@ -695,6 +749,15 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapter 9 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 10 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 11 First Post</p>
+</li>
+<li>
 <p>Chapter 11 Lab Report</p>
 </li>
 </ul>
@@ -741,6 +804,15 @@
 <h3 id="_assignments_due_by_6pm_today_10"><a class="anchor" href="#_assignments_due_by_6pm_today_10"></a>Assignments Due by 6pm Today</h3>
 <div class="ulist">
 <ul>
+<li>
+<p>Online Discussion Forum Chapter 11 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 12 First Post</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 13 First Post</p>
+</li>
 <li>
 <p>Chapter 12 Lab Report</p>
 </li>
@@ -794,6 +866,15 @@
 <h3 id="_assignments_due_by_6pm_today_11"><a class="anchor" href="#_assignments_due_by_6pm_today_11"></a>Assignments Due by 6pm Today</h3>
 <div class="ulist">
 <ul>
+<li>
+<p>Online Discussion Forum Chapter 12 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 13 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 14 First Post</p>
+</li>
 <li>
 <p>Chapter 14 Lab Report</p>
 </li>
@@ -854,6 +935,15 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapter 14 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 15 First Post</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 16 First Post</p>
+</li>
+<li>
 <p>Chapter 15 Lab Report</p>
 </li>
 <li>
@@ -912,6 +1002,18 @@
 <h3 id="_assignments_due_by_6pm_today_13"><a class="anchor" href="#_assignments_due_by_6pm_today_13"></a>Assignments Due by 6pm Today</h3>
 <div class="ulist">
 <ul>
+<li>
+<p>Online Discussion Forum Chapter 15 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 16 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 17 First Post</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 18 First Post</p>
+</li>
 <li>
 <p>Chapter 17 Lab Report</p>
 </li>
@@ -972,6 +1074,18 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapter 17 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 18 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 19 First Post</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 20 First Post</p>
+</li>
+<li>
 <p>Chapter 19 Lab Report</p>
 </li>
 <li>
@@ -1025,6 +1139,18 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapter 19 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 20 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 21 First Post</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 22 First Post</p>
+</li>
+<li>
 <p>Chapter 21 Lab Report</p>
 </li>
 <li>
@@ -1053,6 +1179,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapters 23 Response Post</p>
+</li>
+<li>
 <p>Take Skills Final Exam (two parts!) <strong>Must be done between May 2-6!</strong></p>
 </li>
 <li>
@@ -1067,6 +1196,15 @@
 <ul>
 <li>
 <p>Chapters 21 - 23: Infrastructure Security and Management Exam</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 21 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapter 22 Response Posts</p>
+</li>
+<li>
+<p>Online Discussion Forum Chapters 23 First Post</p>
 </li>
 <li>
 <p>Chapter 23 Lab Report</p>
@@ -1094,6 +1232,9 @@
 <div class="ulist">
 <ul>
 <li>
+<p>Online Discussion Forum Chapters 23 Response Post</p>
+</li>
+<li>
 <p>Certification Practice Exam</p>
 </li>
 </ul>
@@ -1113,7 +1254,7 @@
 </div>
 <hr>
 <div class="paragraph">
-<p>Document Build Time: 2023-04-18 17:59:28 -0500<br>
+<p>Document Build Time: 2023-05-02 18:08:43 -0500<br>
 Page Version: 2022.08<br>
 <span class="image"><img src="../../../program-info/current/_images/CCBYSA.png" alt="Creative Commons License"></span><br>
 This work is licensed under a <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a></p>
